<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="users_name">Name</string>
    <string name="username_default">Username</string>
    <string name="users_company">Company</string>
    <string name="users_location">Location</string>
    <string name="users_repository">Repository</string>
    <string name="users_followers">Followers</string>
    <string name="users_following">Following</string>
    <string name="github_logo">Github Logo</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="language">Language</string>
    <string name="detail">User Detail</string>
    <string name="choose">You choose %s</string>
    <string name="hint">Search User</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite User</string>
    <string name="no_fav_user">There is no Favorite User</string>
    <string name="removed">%s has been Removed from Favorite</string>
    <string name="removed_failed">Failed to Removed %s from Favorite</string>
    <string name="added">%s has been Added to Favorite</string>
    <string name="added_failed">Failed to Add %s to Favorite</string>
    <string name="no_internet_title">There is no Internet</string>
    <string name="no_internet_message">Please check your connection!</string>
    <string name="no_internet_message_followers_following">Cannot load the list of Followers and Following</string>
    <string name="refresh">Refresh</string>
    <string name="warning">Warning</string>
    <string name="ask">Are you sure want to delete %s from Favorite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="key_alarm">alarm</string>
    <string name="key_language">language</string>
    <string name="alarm">Reminder at 09.00 AM</string>
    <string name="select_language">Select Language</string>
    <string name="selected_language">Selected Language</string>
    <string name="english">English</string>
    <string name="bahasa">Indonesian Language</string>
    <string name="notification">Let\'s find popular user on Github!</string>
    <string name="reminder_activated">Reminder at 09.00 AM has been activated</string>
    <string name="reminder_cancelled">Reminder at 09.00 AM has been Cancelled</string>
    <string name="widget_title">YOUR FAVORITE USER</string>
    <string name="widget_empty">NO DATA</string>
</resources>