<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_user"
        android:layout_width="@dimen/profile_two"
        android:layout_height="@dimen/profile_two"
        android:layout_marginTop="@dimen/margin_one"
        android:layout_marginBottom="@dimen/margin_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/title2_text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_two"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_user"
        tools:text="@string/users_name" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:layout_editor_absoluteX="@dimen/margin_one"
        tools:text="@string/username_default" />

    <TextView
        android:id="@+id/tv_detail_followers"
        android:layout_width="@dimen/box"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/content_text"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/users_followers" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="@dimen/box"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/content_text"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/users_following" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text"
        android:layout_marginTop="@dimen/margin_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers"
        tools:layout_editor_absoluteX="@dimen/margin_one"
        tools:text="@string/users_company" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        tools:layout_editor_absoluteX="@dimen/margin_one"
        tools:text="@string/users_location" />

    <TextView
        android:id="@+id/tv_detail_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        tools:layout_editor_absoluteX="@dimen/margin_one"
        tools:text="@string/users_repository" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:layout_marginTop="@dimen/margin_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_repository"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorColor="@android:color/white"
        tools:layout_editor_absoluteX="@dimen/margin_one" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/big"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:layout_editor_absoluteX="@dimen/margin_one" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        app:fabSize="normal"
        app:backgroundTint="@color/black_500"
        app:tint="@color/white"
        app:srcCompat="@drawable/baseline_favorite_border_white_48"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>